# rental-ops-app

./: .gitignore  CHANGELOG.md  Caddyfile  JOURNAL.md  LICENSE.md  README.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  seed.ps1
backend/: .env  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: db.py  main.py  models.py  schemas.py
backend/app/routers/: inventory.py  maintenance.py  sites.py  summary.py  task_io.py  tasks.py  units.py
backend/app/scripts/: migrate_v030.py
backend/app/services/: recurrence.py
backend/data/: app.db
frontend/: .dockerignore  .env.production  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Comments.tsx  NewTaskModal.tsx  TaskAttachments.tsx  TaskRecurrence.tsx
frontend/src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  textarea.tsx  use-toast.ts
frontend/src/lib/: api.ts  datetime.ts
frontend/src/pages/: Dashboard.tsx  Inventory.tsx  Maintenance.tsx  SiteDetail.tsx  Sites.tsx  TaskDetail.tsx  Tasks.tsx  Units.tsx
frontend/src/services/: inventory.ts  maintenance.ts  sites.ts  summary.ts  task_io.ts  tasks.ts  units.ts
