[tool.poetry]
name = "rental-ops-app"
version = "0.3.0"
description = "FastAPI backend for Rental Ops App"
authors = ["You <you@example.com>"]


[tool.poetry.dependencies]
python = "3.13.7"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlmodel = "^0.0.22"
pydantic = "^2.8.2"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"